--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,7 +25,6 @@
             {% load static %}
             <img src="{% static 'core\logo.png' %}" width="300px" alt="">
         </div>
-
         <div class="menu">
             <nav>
                 <a href="{% url 'app:index' %}" class="btn">Home</a>
@@ -80,6 +79,7 @@
                         <a href="{% url 'app:calctraf' %}" class="btn">Tráfego</a>
                     </div>
                 </div>
+                <a href="{% url 'app:dimensionamento' %}" class="btn">Dimensionamento Celular</a>
             </nav>
         </div>
 
